first version for credit
